fixed some more responsive design layout buggies. small ones. still, it's nicer now!

--- a/Challenge/static/css/challenge.css
+++ b/Challenge/static/css/challenge.css
@@ -267,12 +267,6 @@ h1 {
 	position:relative;
 }
 
-.stack .title {
-    font-size: 1.4em;
-	z-index:210;
-	position:relative;
-	width:800px;
-}
 
 .stack_done {
 	display:none;
@@ -294,6 +288,13 @@ h1 {
 }
 
 @media all and (max-width: 959px) {
+	.stack .title {
+	    font-size: 1.2em;
+		z-index:210;
+		position:relative;
+		width:800px;
+	}
+
 	.chapter_name {
 		display:none;
 	}
@@ -367,6 +368,13 @@ h1 {
 }
 
 @media all and (min-width: 960px) {
+	.stack .title {
+	    font-size: 1.4em;
+		z-index:210;
+		position:relative;
+		width:800px;
+	}
+
 	.challenge_description_text {
 		padding:0.25em;
 	}
